[package]
name = "thumb_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
cli-log = "2.0.0"
config-file = "0.2.3"
hyper = { version = "0.14.27", features = ["full"] }
image = "0.24.7"
once_cell = "1.18.0"
regex = "1.9.6"
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }
